OGM-1353 Replace new Long(...) with Long.valueOf(...)